src/styles/ArrowDown.scss
@import 'variables';
@import 'globals';

.arrowDown {
	width: 40px;
	height: 0;
	padding-bottom: 40px;
	border-radius: 50%;
	background: inherit;
	position: relative;
	margin: 0 auto;
	cursor: pointer;
	border: 3px solid $black;
	z-index: 4;
  display: flex;
  left: 6px;
  display: -webkit-box;
	align-items: center;
	justify-content: center;
	@include transition(0.2s);

  @media screen 
  and (min-width: 1100px)
  and (max-width: 1300px) {
    font-size: 1em;

    @supports (overflow:-webkit-marquee)
    and (justify-content:inherit) {
      font-size: 1em
    }
  }

	@media screen and (max-width: $iphone6) {
		width: 30px;
    left: 3px;
    margin-top: -5px;
		padding-bottom: 30px;
	}

  @media only screen
  and (min-width: 421px)
  and (max-width: 799px) {
    font-size: 13px;
  }

  @media screen 
  and (min-width: 1400px)
  and (max-width: 1500px) {
    left: 3px;
  }

  @media screen and (max-width: $iphone5-min) {
    left: 2px;
    margin-top: -3%;
  }

	@media only screen 
  and (min-device-width: 768px)
  and (max-device-width: 1024px) 
  and (orientation: landscape) 
  and (-webkit-min-device-pixel-ratio: 1) {
    width: 44px;
    padding-bottom: 44px;
    margin-top: -1%;
  }

	&.hide {
		display: none;
	}

	&.sticky {
		position: fixed;
		bottom: 30px;
		left: 0;
		right: 0;

    &:before {
      left: 70%;
      top: 2px;

      @media screen and (min-width:0\0) {
        left: 0;
        top: 20px;
      }

      @supports (-moz-appearance:meterbar) {
        left: 0;
        top: 0;
      }
    }

    @media screen and (max-width: $iphone6) {
      display: none;
    }

    @media only screen 
  	and (min-device-width: 768px) 
  	and (max-device-width: 1024px) 
  	and (orientation: portrait) 
  	and (-webkit-min-device-pixel-ratio: 1) {
    	width: 38px;
    	bottom: 30px;
    	font-size: 0.9em;
    	padding-bottom: 38px;
  	}

  	@media only screen 
  	and (min-device-width: 768px) 
  	and (max-device-width: 1024px) 
  	and (orientation: landscape) 
  	and (-webkit-min-device-pixel-ratio: 1) {
  		bottom: 30px;

  		&:before {
  			top: 2px;
  			left: 70%;
  		}
  	}
	}

	&:before {
		position: relative;
		font-family: FontAwesome;
		font-weight: normal;
		content: '\f107';
		font-size: 2.1em;
		color: $black;
    left: 65%;
    top: 2px;

    @supports (-moz-appearance:meterbar) {
      left: 0;
      top: 20px;
    }

    @media screen and (min-width:0\0) {
      left: 0;
      top: 20px;
    }

    @media screen 
    and (min-width: 1000px)
    and (max-width: 1100px) {
      @supports (overflow:-webkit-marquee)
      and (justify-content:inherit) {
        font-size: 1.9em;
      }
    }

		@media screen and (max-width: $iphone6) {
			font-size: 20px;
      top: 1px;
		}

    @media screen 
    and (min-width: 1400px)
    and (max-width: 1500px) {
      left: 70%;
      top: 2px;

      @supports (-moz-appearance:meterbar) {
        top: 20px;
        left: 0;
      }
    }

    @media screen 
    and (min-width: 1500px)
    and (max-width: 1700px) {
      left: 70%;
      font-size: 2em;
      top: 2px;

      @supports (-moz-appearance:meterbar) {
        top: 20px;
        left: 0;
      }
    }

    @media screen 
    and (min-width: 1700px) {
      
    }

		@media only screen 
  		and (min-device-width: 768px) 
  		and (max-device-width: 1024px) 
  		and (orientation: landscape) 
  		and (-webkit-min-device-pixel-ratio: 1) {
  			font-size: 2.3em;
        top: 0;
  		}
	}

	&:hover {
		background-color: $black;
		@include transition(0.2s);

		&:before {
			color: $white;
		}
	}

  &.purple-text {
    &:hover {
      &:before {
        color: $light-purple;
      }
    }
  }

  &.green-text {
    &:hover {
      &:before {
        color: $light-green;
      }
    }
  }

  &.orange-text {
    &:hover {
      &:before {
        color: $light-orange;
      }
    }
  }

  &.yellow-text {
    &:hover {
      &:before {
        color: $light-yellow;
      }
    }
  }

  &.blue-text {
    &:hover {
      &:before {
        color: $light-blue;
      }
    }
  }

  &.red-text {
    &:hover {
      &:before {
        color: $bright-red;
      }
    }
  }

	&.spacing {
    opacity: 0;
		margin-top: 2%;
		width: 48px;
		padding-bottom: 40px;
    @include fadeIn(0.5s,1.5s);

		@media screen and (max-width: $iphone6) {
			margin-top: 8%;
			width: 42px;
			padding-bottom: 36px;
		}

    @media screen and (max-width: 361px) {
      left: 0;
    }

		@media screen and (max-width: $iphone5-min)
    and (-webkit-min-device-pixel-ratio: 2) {
      margin-top: 3%;
      width: 42px;
      padding-bottom: 36px;
    }

		&:before {
			margin-top: 0;
      top: 0;
      left: 0;

      @media screen and (max-width: $iphone6)
      and (-webkit-min-device-pixel-ratio: 1) {
        font-size: 24px;
        left: 25%;
      }

      @media screen and (max-device-width: 413px) {
        left: 0;
      }

      @media screen and (max-width: 361px) {
        font-size: 24px;
        top: 0;
        left: 0;
      }

			@media screen and (max-width: $iphone6)
      and (-webkit-min-device-pixel-ratio: 2) {
				font-size: 24px;
        top: 0;
        left: -25%;
			}

      @media screen and (max-width: $iphone5-min)
      and (-webkit-min-device-pixel-ratio: 2) {
        font-size: 24px;
        top: 0;
        left: -25%;
      }

  		@media only screen 
  		and (min-device-width: 768px) 
  		and (max-device-width: 1024px) 
  		and (orientation: landscape) 
  		and (-webkit-min-device-pixel-ratio: 1) {
    		top: 0;
    		left: -1px;
  		}
		}

		@media only screen 
  	and (min-device-width: 768px) 
  	and (max-device-width: 1024px) 
  	and (orientation: portrait) 
  	and (-webkit-min-device-pixel-ratio: 1) {
    	margin-top: 8%;
    	width: 48px;
  	}

  	@media only screen 
  	and (min-device-width: 768px) 
  	and (max-device-width: 1024px) 
  	and (orientation: landscape) 
  	and (-webkit-min-device-pixel-ratio: 1) {
    	width: 48px;
  	}

    @media screen and (min-width:0\0) {
      background-color: $light-green;

      &:before {
        margin-top: 150%;
        display: block;
      }
    }
	}

	&.nav-arrow {
		margin-top: 3%;
    left: 0;

    @media screen 
    and (min-width: 1000px)
    and (max-width: 1050px) {

      @supports (overflow:-webkit-marquee)
      and (justify-content:inherit) {
        margin-top: 50px;
      }
    }

    @media screen 
    and (min-width: 1260px)
    and (max-width: 1300px) {
      @supports (overflow:-webkit-marquee)
      and (justify-content:inherit) {
        margin-top: 60px;
      }
    }

    @media screen 
    and (min-width: 1400px)
    and (max-width: 1500px) {
      margin-top: 50px;
    }

    @media screen 
    and (min-width: 1500px)
    and (max-width: 1700px) {
      margin-top: 92px;
    }

    @media screen 
    and (min-width: 1700px) {
      margin-top: 170px;

      @supports (overflow:-webkit-marquee)
      and (justify-content:inherit) {
        margin-top: 150px;
      }
    }

    @media screen and (max-width: $iphone6) {
      width: 40px;
      margin-top: -10px;
      padding-bottom: 40px;
    }

    &:before {
      left: 66%;
      top: 2px;

      @supports (-moz-appearance:meterbar) {
        left: 0;
        top: 20px;
      }

      @media screen and (min-width:0\0) {
        left: 0;
        top: 20px;
      }

      @media screen and (max-width: $iphone6) {
        font-size: 26px;
      }

      @media screen 
      and (min-width: 1400px)
      and (max-width: 1500px) {
        top: 2px;

        @supports (-moz-appearance:meterbar) {
          top: 20px;
        }
      }
    }

		@media only screen 
  	and (min-device-width: 768px) 
  	and (max-device-width: 1024px) 
  	and (orientation: landscape) 
  	and (-webkit-min-device-pixel-ratio: 1) {
  		margin-top: 4.5%;

  		&:before {
  			top: 2px;
  			left: 70%;
      }
  	}

    @media only screen 
    and (min-device-width: 768px) 
    and (max-device-width: 1024px) 
    and (orientation: portrait) 
    and (-webkit-min-device-pixel-ratio: 1) {
      margin-top: 17%;

    }
	}
}

